--- a/css/all.css
+++ b/css/all.css
@@ -269,7 +269,7 @@ header {
   width: 90px;
   height: 40px;
   color: #fff;
-  font-family: "Open Sans";
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 42px;
   margin-top: 8px;
@@ -1246,7 +1246,7 @@ header {
 @media (min-width: 320px) and (max-width: 767px) {
 #wrapper{
   width: 100%;
-  height: 4558px;
+  height: 4530px;
 }
 body {
   width: 100%;
@@ -1259,7 +1259,7 @@ main {
 }
 header {
   width:100%;
-  height: 216px;
+  height: 188px;
 }
 .hd{
   width: 300px;
@@ -1273,17 +1273,17 @@ header {
 }
 .hd .mainnav{
   width: 300px;
-  height: 68px;
+  height: 52px;
 }
 .hd .mainnav ul{
   display: flex;
   flex-wrap: wrap;
   width: 300px;
-  height: 70px;
+  height: 52px;
 }
 .hd .mainnav ul li{
   margin-right: 0;
-  width: 122px;
+  width: 69px;
   text-align: left;
 }
 .hd .mainnav ul li:first-child{
@@ -1291,6 +1291,9 @@ header {
 }
 .hd .mainnav ul li:nth-child(2){
   width: 110px;
+}
+.mainnav ul li:nth-child(3), .mainnav ul li:nth-last-child(2), .mainnav ul li:last-child{
+  margin-top: 0;
 }
 .hd .mainnav ul li .sel{
   font-size: 12px;
@@ -1310,7 +1313,7 @@ header {
 .sign_in {
   width: 152px;
   height: 30px;
-  margin: 22px 0 22px 0;
+  margin: 12px 0 12px 0;
 }
 .sign_in ul {
   width: 142px;
@@ -1321,7 +1324,7 @@ header {
   height: 30px;
 }
 .sign_in ul li a{
-  line-height: 28px;
+  line-height: 30px;
 }
 .sign_in ul li:hover{
   width: 70px;
